@@ -42,6 +42,13 @@ button. </p>
 is started. Any information and errors will display here. <br>
 </p>
 
+<a name="mysql"></a>
+<p>
+There is also a <a href="http://www.zwets.com/qtstalker-plugin-mysql/">MySQL Plugin</a>
+maintained as a separate project.
+</p>
+
+
 <p><br>
 <br>
 <br>
