@@ -108,6 +108,7 @@
   <li><a href="csv.html">CSV</a></li>
   <li><a href="nybot.html">NYBOT</a></li>
   <li><a href="yahoo.html">Yahoo</a></li>
+  <li><a href="quotes.html#mysql">MySQL</a></li>
 </ol>
 <h3><a href="chartobjects.html">Chart Object Reference</a></h3>
 <h3><a href="indicatorreference.html">Indicator Reference</a></h3>
