@@ -15,4 +15,6 @@ method and exchanges outside North America. Thanks to xley.
 
 20070928: Improved installation instructions. Thanks to xley.
 
-20070928: Provide link to Debian packages. Thanks to zwets.
+20070928: Provided link to Debian packages. Thanks to zwets.
+
+20070928: Provided link to MySQL Plugin which is maintained as a separate project. Thanks to zwets.
